--- a/src/Theme.css
+++ b/src/Theme.css
@@ -10,8 +10,10 @@
   --color_primary: #004660;
   --color_secondary: #0a6f94;
   --color_tertiary: #50b2d6;
+  --color_accessibility__light: #ECEFF1;
   --color_white: #ffffff;
   --color_gray: rgba(122, 118, 118, 0.897);
+  --color_accessibility: #263238;
   --bg_lightgray: rgba(245, 245, 245, 0.8);
   --default_font__size: 1rem;
   --font_family: sans-serif;
@@ -28,6 +30,15 @@
 
 .color-tertiary {
   color: var(--color_tertiary);
+}
+
+.color-accessibility {
+  color: var(--color_accessibility);
+}
+
+
+.color_light__accessibility {
+  color: var(--color_light__accessibility);
 }
 
 .color-white {
@@ -53,4 +64,11 @@
 
 .bg-lightgray {
   background-color: var(--bg_lightgray);
+}
+
+
+
+
+.bg-accessibility {
+  background-color: var(--color_accessibility)
 }
