--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,9 @@
 .App-link {
   color: #61dafb;
 }
-
+nav {
+  height: 100vh;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
