--- a/src/components/bureau/BureauDashboard.css
+++ b/src/components/bureau/BureauDashboard.css
@@ -16,5 +16,6 @@
 }
 
 .details-container .details-title {
-    background-color: var(--color_tertiary);
+    background-color: var(--bg_hover);
+    color: var(--color_white);
 }
