--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.brand.navbar-brand .brand-logo {
+  height: 48px;
+  width: 48px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.nav-links .sign-in,
+.nav-links .sign-up {
+  margin: auto 12px;
+  color: var(--color_white);
+  border-radius: 22px;
+  -webkit-border-radius: 22px;
+  -moz-border-radius: 22px;
+  -ms-border-radius: 22px;
+  -o-border-radius: 22px;
+}
+
+.nav-links .sign-in {
+  background-color: var(--bg_hover);
+}
+
+.nav-links .sign-in:hover,
+.nav-links .sign-up:hover {
+  transition-delay: 0s;
+  transition-duration: 0.5s;
+  transition-property: background-color;
+  transition-timing-function: linear;
+}
+
+.nav-links .sign-in:hover {
+  background-color: var(--bg_hover__dark);
+}
+
+.nav-links .sign-up:hover {
+  background-color: var(--bg_hover__dark);
+}
+
+.action-buttons .action-buttons-link {
+  padding: 10px 32px;
+}
+
+.action-buttons .action-buttons-link {
+  border: 2px solid var(--color_tertiary);
+}
+
+.action-buttons .action-buttons-link:hover {
+  background-color: var(--color_hover);
+  border: 2px solid var(--color_hover);
+  color: var(--color_white);
+  transition-delay: 0s;
+  transition-duration: 0.5s;
+  transition-property: background-color;
+  transition-timing-function: linear;
+
+}
+
+.hero-img {
+  background: url(/src/components/assets/images/bg/bg-hero.jpg);
+  background-size: cover;
+  min-width: 100%;
+  height: 80vh;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
 }
